[package]
name = "hoas"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hoas-conf = { path = "../hoas-conf" }
hoas-route = { path = "../hoas-route" }
actix-web = "4.0.0-beta.8"
backtrace = "0.3.50"
log = "0.4.11"
env_logger = "0.7.1"
http = "0.2"
uuid = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = { version = "0.3", default-features = false }
futures = { version = "0.3", default-features = false }
#tokio = { version = "1.10.0", features = ["full"] }
mongodb = { version = "2.0.0-beta", default-features = false, features = ["tokio-runtime"] }
